Bug 224928 - [PATCH] Virtualbox host chapter lost necessary information between updates
Summary: [PATCH] Virtualbox host chapter lost necessary information between updates
Status: Closed FIXED
Alias: None
Product: Documentation
Classification: Unclassified
Component: Books & Articles (show other bugs)
Version: Latest
Hardware: Any Any
: --- Affects Only Me
Assignee: Sevan Janiyan
URL: https://reviews.freebsd.org/D16681
Keywords: patch
Depends on:
Blocks:
 
Reported: 2018-01-05 10:19 UTC by Guido Falsi
Modified: 2021-05-26 18:54 UTC (History)
2 users (show)

See Also:


Attachments
Add back text removed in r49599 (1.56 KB, patch)
2018-01-05 10:19 UTC, Guido Falsi
no flags Details | Diff
Add back text removed in r49599 (1.13 KB, patch)
2018-01-05 19:16 UTC, Guido Falsi
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Guido Falsi freebsd_committer freebsd_triage 2018-01-05 10:19:41 UTC
Created attachment 189437 [details]
Add back text removed in r49599

The virtualbox chapter lost some information in section "21.6.2. VirtualBox™ USB Support".

It tells user to put themselves in the "operator" group, but that's not enough since by default USB devices are set with 0600 permission:

> ll /dev/usb/
total 0
crw-------  1 root  operator  0x2b Jan  5 10:48 0.1.0
crw-------  1 root  operator  0x36 Jan  5 10:48 0.1.1


For this to work they also need to set a specific devfs rule.

For context the handbook actually had the correct information up to r49599, when the whole part was removed. When the chapter was added back again in r50613 only the pw part was added back and not the devfs.rules one, but it's still needed to get a working setup.

Attached patch adds back text from before r49599.
Comment 1 Guido Falsi freebsd_committer freebsd_triage 2018-01-05 19:16:59 UTC
Created attachment 189449 [details]
Add back text removed in r49599

Previous patch missed a newline in code block.
Comment 2 commit-hook freebsd_committer freebsd_triage 2018-08-19 14:57:47 UTC
A commit references this bug:

Author: sevan
Date: Sun Aug 19 14:57:40 UTC 2018
New revision: 52161
URL: https://svnweb.freebsd.org/changeset/doc/52161

Log:
  Re-add instructions for USB devfs rules.

  PR:		224928
  Submitted by:	madpilot
  Approved by:	bcr
  Differential Revision:	https://reviews.freebsd.org/D16681

Changes:
  head/en_US.ISO8859-1/books/handbook/virtualization/chapter.xml
Comment 3 Sevan Janiyan freebsd_committer freebsd_triage 2018-08-19 14:59:24 UTC
Thanks for the patch & heads up, that's been committed now.
Comment 4 commit-hook freebsd_committer freebsd_triage 2021-05-26 14:50:16 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=71776d67198fadd7d96937c9bdd22063636b132b

commit 71776d67198fadd7d96937c9bdd22063636b132b
Author:     Mark Johnston <markj@FreeBSD.org>
AuthorDate: 2021-05-26 13:49:49 +0000
Commit:     Mark Johnston <markj@FreeBSD.org>
CommitDate: 2021-05-26 14:42:36 +0000

    oce: Fix handling of m_pullup() errors in oce_tso_setup()

    m_pullup() frees the input mbuf chain upon a failure.  Set *mpp to NULL
    in this case to ensure that the caller does not free the chain again.

    PR:             224928
    Submitted by:   Lv Yunlong <lylgood@foxmail.com> (original version)
    MFC after:      1 week

 sys/dev/oce/oce_if.c | 3 ---
 1 file changed, 3 deletions(-)
Comment 5 Mark Johnston freebsd_committer freebsd_triage 2021-05-26 18:54:04 UTC
(In reply to commit-hook from comment #4)
Sorry, that was a typo.